--- a/MVC_Git0514/Views/Shared/_Layout.cshtml
+++ b/MVC_Git0514/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
                     <li>@Html.ActionLink("我的Action", "MyAction1", "Home")</li>
                     <li>@Html.ActionLink("我的Action2", "MyAction2", "Home")</li>
+                    <li>@Html.ActionLink("我的Action3", "MyAction3", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
